--- a/src/main/resources/templates/work/list.html
+++ b/src/main/resources/templates/work/list.html
@@ -3,7 +3,7 @@
       xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title th:text="#{navbar.works}">Title</title>
+    <title th:text="#{list.work.all}">Title</title>
     <!-- For bootstrap -->
 <!--
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <!-- default styles -->
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" rel="stylesheet">-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+    <!-- optionally if you need to use a theme, then include the theme CSS file as mentioned below -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/themes/krajee-svg/theme.css" media="all" rel="stylesheet" type="text/css" />
+    <!-- important mandatory libraries -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/js/star-rating.min.js" type="text/javascript"></script>
+    <!-- optionally if you need to use a theme, then include the theme JS file as mentioned below -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/themes/krajee-svg/theme.js"></script>
+
     <!-- Local css -->
     <link rel="stylesheet" type="text/css" href="/css/base/background.css">
     <link rel="stylesheet" type="text/css" href="/css/base/main_panel.css">
@@ -101,7 +113,7 @@
                </b>
                <!-- MOST RECENT -->
                <div class="container-fluid" style="padding-bottom: 10px">
-                   <h2 th:text="#{mainpage.top.update.all}">Топ-5 самых популярных работ</h2>
+                   <h2 th:text="#{list.work.all}">Топ-5 самых популярных работ</h2>
                    <h4 th:text="#{list.work.sorted} + ': ' + #{'list.work.sorted.' + ${sortSubject}}">Топ-5 самых популярных работ</h4>
                    <th:block th:if="${allWorks != null}">
                        <th:block th:if="${allWorks.size() > 0}">
@@ -110,14 +122,37 @@
                                    <div class="container-fluid">
                                        <div class="row">
                                            <div class="col-sm-11">
-                                               <form th:id="'open_work_form' + ${work.getName()} + ${allWorks.indexOf(work)}" th:action="'/works/view/' + ${work.getName()}" method="get">
-                                                   <a>
-                                                       <h3 class="link" style="font-weight: bold; margin-top: 0"
-                                                           onclick="document.getElementById(this.parentNode.parentNode.id).submit(); return false;"
-                                                          th:text="${work.getName()}">submit</h3>
-                                                   </a>
-                                               </form>
-                                               <p class="work-element" style="margin-top: -0.5%; margin-bottom: -1%">
+                                               <div class="work-element row" style="margin-bottom: -1%; display: inline-flex">
+                                                   <form th:id="'open_work_form' + ${work.getName()} + ${allWorks.indexOf(work)}"
+                                                         th:action="'/works/view/' + ${work.getName()}" method="get">
+                                                       <a>
+                                                           <h3 class="link text-output" style="font-weight: bold; margin-top: 0"
+                                                               onclick="document.getElementById(this.parentNode.parentNode.id).submit(); return false;"
+                                                               th:text="${work.getName()}">submit</h3>
+                                                       </a>
+                                                   </form>
+                                                   <div class="row" style="display: inline-flex; margin-left: 10px; margin-top: -3px; vertical-align: middle">
+                                                       <input th:name="'u_' + ${allWorks.indexOf(work)}" type="text" class="rating"
+                                                              th:value="${work.getAverageAssessment()}">
+                                                       <input type="hidden" th:name="'uas_' + ${allWorks.indexOf(work)}"
+                                                              th:value="${work.getAssessmentCount()}">
+                                                       <script>
+                                                           // initialize with defaults
+                                                           $('input[name^="u_"]').rating({
+                                                               size: 'sm',
+                                                               step: 0.1,
+                                                               displayOnly: true,
+                                                               showCaption: false
+                                                           });
+                                                       </script>
+                                                       <th:block th:if="${work.getAssessmentCount() >= 0}">
+                                                           <div class="secondary-text-work"
+                                                                style="margin-left: 5px; margin-top: -4px; vertical-align: middle"
+                                                                th:text="'(' + ${work.getAssessmentCount()} + ')'">a</div>
+                                                       </th:block>
+                                                   </div>
+                                               </div>
+                                               <p class="work-element" style="margin-bottom: -1%">
                                                    <label for="author" th:text="#{work.author} + ':'">F</label>
                                                    <a th:text="${work.getAuthorName()}" id="author">Type</a>
                                                </p>
@@ -202,7 +237,7 @@
                                                            </div>
                                                        </div>
                                                    </div>
-                                                   <div sec:authorize="hasAuthority('USER')">
+                                                   <div sec:authorize="!hasAuthority('ADMIN')">
                                                        <label for="size" th:text="#{work.size} + ':'">F</label>
                                                        <label th:text="#{work.size.chapters} + ': ' + ${work.getChapters().size()} + ', ' + #{work.size.words} + ': ' + ${work.getWordsCount()}"
                                                               id="size" style="font-weight: normal">Type</label>
@@ -216,7 +251,7 @@
                                            </div>
                                            <div class="col-sm-1">
                                                <div sec:authorize="hasAuthority('ADMIN')">
-                                                   <form th:id="'edit_work_form' + ${allWorks.indexOf(work)} + ${allWorks.indexOf(work)}"
+                                                   <form th:id="'edit_work_form' + ${work.getName()} + ${allWorks.indexOf(work)}"
                                                          th:action="'/home/works/' + ${work.getName()} + '/edit'" method="get">
                                                        <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;">
                                                            <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -225,7 +260,7 @@
                                                            </svg>
                                                        </a>
                                                    </form>
-                                                   <form th:id="'delete_work_form' + ${topWorksByUpdate.indexOf(work)} + ${topWorksByUpdate.indexOf(work)}"
+                                                   <form th:id="'delete_work_form' + ${work.getName()} + ${allWorks.indexOf(work)}"
                                                          th:action="'/home/works/' + ${work.getName()} + '/delete'" method="post">
                                                        <a class="link" onclick="return formSubmitter(this.parentNode.id)">
                                                            <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
