--- a/src/main/resources/templates/work/work_view.html
+++ b/src/main/resources/templates/work/work_view.html
@@ -15,6 +15,17 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <!-- Add icon library for stars-->
+    <!-- default styles -->
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" rel="stylesheet">-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+    <!-- optionally if you need to use a theme, then include the theme CSS file as mentioned below -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/themes/krajee-svg/theme.css" media="all" rel="stylesheet" type="text/css" />
+    <!-- important mandatory libraries -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/js/star-rating.min.js" type="text/javascript"></script>
+    <!-- optionally if you need to use a theme, then include the theme JS file as mentioned below -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.6/themes/krajee-svg/theme.js"></script>
 
     <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <!-- Local css -->
@@ -26,6 +37,7 @@
     <link rel="stylesheet" type="text/css" href="/css/input/textareas.css">
     <link rel="stylesheet" type="text/css" href="/css/items/work_item.css">
     <link rel="stylesheet" type="text/css" href="/css/items/comment_item.css">
+    <link rel="stylesheet" type="text/css" href="/css/typo/fic_typo.css">
     <!-- Scripts -->
     <script src="/js/moment.min.js"></script>
     <script src="/js/app.js"></script>
@@ -114,7 +126,31 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-6">
-                                <h3 th:text="${viewedWork.getName()}" style="margin-top: -0.01%; font-weight: bold">L</h3>
+                                <div class="work-element row" style="display: inline-flex">
+                                    <h3 class="text-output" th:text="${viewedWork.getName()}"
+                                        style="margin-top: -0.01%; font-weight: bold">L</h3>
+                                    <div class="row" style="display: inline-flex; margin-left: 10px; margin-top: -3px; vertical-align: middle">
+                                        <input name="u_" id="u_" type="text" class="rating"
+                                               th:value="${viewedWork.getAverageAssessment()}">
+                                        <input type="hidden" name="uas_" id="uas_"
+                                               th:value="${viewedWork.getAssessmentCount()}">
+                                        <script>
+                                            // initialize with defaults
+                                            $('input[name^="u_"]').rating({
+                                                size: 'sm',
+                                                step: 0.1,
+                                                displayOnly: true,
+                                                showCaption: false,
+                                                /*defaultCaption: '(' + $('input[name="uas_"]').val() + ')'*/
+                                            });
+                                        </script>
+                                        <th:block th:if="${viewedWork.getAssessmentCount() >= 0}">
+                                            <div class="secondary-text-work"
+                                                 style="margin-left: 5px; margin-top: -4px; vertical-align: middle"
+                                                 th:text="'(' + ${viewedWork.getAssessmentCount()} + ')'">a</div>
+                                        </th:block>
+                                    </div>
+                                </div>
                                 <p class="work-element" style="margin-top: -0.5%; margin-bottom: -1%">
                                     <label for="category" th:text="#{work.author} + ':'">F</label>
                                     <a th:text="${viewedWork.getAuthorName()}" id="author">Type</a>
@@ -216,11 +252,45 @@
                         </th:block>
                     </div>
                 </div>
+                <!-- assessment -->
+                <div sec:authorize="isAuthenticated()">
+                    <div class="item-panel item-panel-light">
+                        <div class="container-fluid">
+                            <h3 th:text="#{assessment.question}">H</h3>
+                            <input type="hidden" id="user_assess" th:value="${userAssessment}">
+                            <input type="hidden" id="principal" th:value="${#authentication.getName()}">
+                            <input type="hidden" id="authorName" th:value="${viewedWork.getAuthorName()}">
+                            <script>
+                                // initialize with defaults
+                                $("#user_assess").rating({
+                                    step: 0.1,
+                                    size: 'lg'
+                                });
+                                $('#user_assess').on('rating:change', function(event, value, caption) {
+                                    giveAssessment(value);
+                                    console.log("rating:change");
+                                });
+                                $('#user_assess').on('rating:clear', function(event) {
+                                    giveAssessment(0);
+                                    console.log("rating:clear");
+                                });
+                            </script>
+                            <div id="assess_success" class="alert alert-success text-output"
+                                 th:text="#{assessment.thanks}" style="display: none">
+                                Type
+                            </div>
+                            <div id="assess_info" class="alert alert-info text-output"
+                                 th:text="#{assessment.info}" style="display: none">
+                                Type
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- comments -->
                 <th:block th:if="${viewedWork.getChapters().size() > 0}">
                     <div class="item-panel item-panel-light">
                         <div class="container-fluid">
-                            <h3 th:text="#{comment.comments} + ':'" style="font-weight: bold">H</h3>
+                            <h3 class="text-output" th:text="#{comment.comments} + ':'" style="font-weight: bold">H</h3>
 
                             <th:block th:if="${viewedWork.getComments().size() == 0}">
                                 <p id="noComments" th:text="#{comment.comments.empty}">C</p>
@@ -232,12 +302,12 @@
                                     <div class="container-fluid">
                                         <div class="comment-head">
                                             <div class="row" style="padding-left: 5px">
-                                                <div class="col-sm-7 primary-text"
+                                                <div class="col-sm-7 primary-text-comment"
                                                      th:text="${comment.getAuthorName()}">f</div>
-                                                <div class="col-sm-4 secondary-text"
+                                                <div class="col-sm-4 secondary-text-comment"
                                                      th:text="${#dates.format(new java.util.Date(comment.getPostTime()), 'dd.MM.YYYY HH:mm:ss')}"></div>
                                                 <div class="col-sm-1">
-                                                <span class="secondary-text close" th:id="'span_' + ${comment.getId()}"
+                                                <span class="secondary-text-comment close" th:id="'span_' + ${comment.getId()}"
                                                       style="float: right"
                                                       sec:authorize="isAuthenticated()">X</span>
                                                 </div>
